--- a/examples/developer_guide/3_simple_cpp_stage/src/simple_cpp_stage/_lib/CMakeLists.txt
+++ b/examples/developer_guide/3_simple_cpp_stage/src/simple_cpp_stage/_lib/CMakeLists.txt
@@ -1,4 +1,4 @@
-# SPDX-FileCopyrightText: Copyright (c) 2021-2024, NVIDIA CORPORATION & AFFILIATES. All rights reserved.
+# SPDX-FileCopyrightText: Copyright (c) 2022-2024, NVIDIA CORPORATION & AFFILIATES. All rights reserved.
 # SPDX-License-Identifier: Apache-2.0
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
@@ -13,14 +13,15 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-list(APPEND CMAKE_MESSAGE_CONTEXT "dep")
+list(APPEND CMAKE_MESSAGE_CONTEXT "pass_thru_cpp_stage")
 
-rapids_find_package(CUDAToolkit REQUIRED)
-
-set(RABBITMQ_VERSION "0.12.0" CACHE STRING "Version of RabbitMQ-C to use")
-include(Configure_rabbitmq)
-
-set(SIMPLE_AMQP_CLIENT_VERSION "2.5.1" CACHE STRING "Version of SimpleAmqpClient to use")
-include(Configure_SimpleAmqpClient)
+morpheus_add_pybind11_module(pass_thru_cpp
+  SOURCE_FILES
+    "pass_thru.cpp"
+  INCLUDE_DIRS
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
+  LINK_TARGETS
+    morpheus
+)
 
 list(POP_BACK CMAKE_MESSAGE_CONTEXT)
