--- a/examples/developer_guide/3_simple_cpp_stage/setup.cfg
+++ b/examples/developer_guide/3_simple_cpp_stage/setup.cfg
@@ -1,4 +1,4 @@
-# SPDX-FileCopyrightText: Copyright (c) 2021-2024, NVIDIA CORPORATION & AFFILIATES. All rights reserved.
+# SPDX-FileCopyrightText: Copyright (c) 2023-2024, NVIDIA CORPORATION & AFFILIATES. All rights reserved.
 # SPDX-License-Identifier: Apache-2.0
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
@@ -13,14 +13,23 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-list(APPEND CMAKE_MESSAGE_CONTEXT "dep")
+[metadata]
+name = simple_cpp_stage
+version = attr: versioneer.get_version
+description = Morpheus Example - Pass Thru C++ Stage
+author = NVIDIA Corporation
+license = Apache
+classifiers =
+    Intended Audience :: Developers
+    Programming Language :: Python
+    Programming Language :: Python :: 3.10
 
-rapids_find_package(CUDAToolkit REQUIRED)
+[options]
+zip_safe = False
+include_package_data = True
+packages = find:
+package_dir =
+    =src
 
-set(RABBITMQ_VERSION "0.12.0" CACHE STRING "Version of RabbitMQ-C to use")
-include(Configure_rabbitmq)
-
-set(SIMPLE_AMQP_CLIENT_VERSION "2.5.1" CACHE STRING "Version of SimpleAmqpClient to use")
-include(Configure_SimpleAmqpClient)
-
-list(POP_BACK CMAKE_MESSAGE_CONTEXT)
+[options.packages.find]
+where = src
