--- a/morpheus/_lib/doca/CMakeLists.txt
+++ b/morpheus/_lib/doca/CMakeLists.txt
@@ -1,5 +1,5 @@
 # =============================================================================
-# Copyright (c) 2020-2023, NVIDIA CORPORATION.
+# Copyright (c) 2020-2024, NVIDIA CORPORATION.
 #
 # Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except
 # in compliance with the License. You may obtain a copy of the License at
@@ -80,7 +80,7 @@ install(
   TARGETS
     morpheus_doca
   EXPORT
-    ${PROJECT_NAME}-exports
+    ${PROJECT_NAME}-core-exports
   FILE_SET
     public_headers
   COMPONENT
