--- a/dependencies.yaml
+++ b/dependencies.yaml
@@ -84,7 +84,12 @@ files:
       - benchmark_cpp
       - runtime
       - test_python_morpheus
-      - examples
+      - example-dfp-prod
+      - example-gnn
+      - example-llm-agents
+      - example-llm-completion
+      - example-llm-rag
+      - example-llm-vdb-upload
       - cudatoolkit
       - python
 
@@ -101,7 +106,12 @@ files:
       - python
       - docs
       - runtime
-      - examples
+      - example-dfp-prod
+      - example-gnn
+      - example-llm-agents
+      - example-llm-completion
+      - example-llm-rag
+      - example-llm-vdb-upload
 
   runtime:
     output: none
@@ -147,9 +157,8 @@ channels:
   - conda-forge
   - huggingface
   - rapidsai
-  - nvidia/label/cuda-12.1.0
-  - nvidia
   - rapidsai-nightly
+  - nvidia
   - nvidia/label/dev
   - pytorch
   - defaults
@@ -160,7 +169,7 @@ dependencies:
     common:
       - output_types: [conda]
         packages:
-          - mrc=24.03 # should this be in build, or somewhere else?
+          - mrc=24.03
           - gcc_linux-64=11.2
           - gxx_linux-64=11.2
           - boost-cpp=1.84
