--- a/examples/llm/vdb_upload/vdb_config.yaml
+++ b/examples/llm/vdb_upload/vdb_config.yaml
@@ -80,7 +80,7 @@ vdb_pipeline:
     #      chunk_overlap: 51
     #      chunk_size: 512
     #      enable_cache: false
-    #    vdb_resource_name: "VDBGENERAL"
+    #    vdb_resource_name: "vdb_rss"
 
     - type: filesystem
       name: "filesystem_pdf_source"
@@ -95,7 +95,7 @@ vdb_pipeline:
           - "morpheus/data/scratch/the-un-security-council-handbook-by-scr-1.pdf"
           - "morpheus/data/scratch/the-un-security-council-handbook-by-scr-1.pdf"
           - "morpheus/data/scratch/the-un-security-council-handbook-by-scr-1.pdf"
-        vdb_resource_name: "VDBGENERAL"
+        vdb_resource_name: "vdb_pdf"
         watch: false
 
     - type: filesystem
@@ -114,7 +114,7 @@ vdb_pipeline:
         enable_monitor: True
         filenames:
           - "models/datasets/training-data/log-parsing-training-data.csv"
-        vdb_resource_name: "VDBGENERAL"
+        vdb_resource_name: "vdb_csv"
         watch: false
 
     - type: custom
@@ -145,46 +145,161 @@ vdb_pipeline:
 
   vdb:
     batch_size: 5120
+    resource_name: "VDBGENERAL"  # Identifier for the resource in the vector database
     embedding_size: 384
     recreate: True  # Whether to recreate the resource if it already exists
-    resource_name: "VDBGENERAL"  # Identifier for the resource in the vector database
     service: "milvus"  # Specify the type of vector database
     uri: "http://localhost:19530"  # URI for connecting to the Vector Database server
-    resource_schema:
-      index_conf:
-        field_name: embedding
-        metric_type: L2
-        index_type: HNSW
-        params:
-          M: 8
-          efConstruction: 64
+    resource_schemas:
+      VDBGENERAL:
+        index_conf:
+          field_name: "embedding"
+          metric_type: "L2"
+          index_type: "HNSW"
+          params:
+            M: 8
+            efConstruction: 64
 
-      schema_conf:
-        enable_dynamic_field: true
-        schema_fields:
-          - name: id
-            dtype: INT64
-            description: Primary key for the collection
-            is_primary: true
-            auto_id: true
-          - name: title
-            dtype: VARCHAR
-            description: Title or heading of the data entry
-            max_length: 65_535
-          - name: source
-            dtype: VARCHAR
-            description: Source or origin of the data entry
-            max_length: 65_535
-          - name: summary
-            dtype: VARCHAR
-            description: Brief summary or abstract of the data content
-            max_length: 65_535
-          - name: content
-            dtype: VARCHAR
-            description: Main content or body of the data entry
-            max_length: 65_535
-          - name: embedding
-            dtype: FLOAT_VECTOR
-            description: Embedding vectors representing the data entry
-            dim: 384 # Size of the embeddings to store in the vector database
-        description: Collection schema for diverse data sources
+        schema_conf:
+          enable_dynamic_field: true
+          schema_fields:
+            - name: id
+              dtype: INT64
+              description: Primary key for the collection
+              is_primary: true
+              auto_id: true
+            - name: title
+              dtype: VARCHAR
+              description: Title or heading of the data entry
+              max_length: 65_535
+            - name: source
+              dtype: VARCHAR
+              description: Source or origin of the data entry
+              max_length: 65_535
+            - name: summary
+              dtype: VARCHAR
+              description: Brief summary or abstract of the data content
+              max_length: 65_535
+            - name: content
+              dtype: VARCHAR
+              description: Main content or body of the data entry
+              max_length: 65_535
+            - name: embedding
+              dtype: FLOAT_VECTOR
+              description: Embedding vectors representing the data entry
+              dim: 384 # Size of the embeddings to store in the vector database
+          description: Collection schema for diverse data sources
+      vdb_pdf:
+        index_conf:
+          field_name: embedding
+          metric_type: L2
+          index_type: HNSW
+          params:
+            M: 8
+            efConstruction: 64
+
+        schema_conf:
+          enable_dynamic_field: true
+          schema_fields:
+            - name: id
+              dtype: INT64
+              description: Primary key for the collection
+              is_primary: true
+              auto_id: true
+            - name: title
+              dtype: VARCHAR
+              description: Title or heading of the data entry
+              max_length: 65_535
+            - name: source
+              dtype: VARCHAR
+              description: Source or origin of the data entry
+              max_length: 65_535
+            - name: summary
+              dtype: VARCHAR
+              description: Brief summary or abstract of the data content
+              max_length: 65_535
+            - name: content
+              dtype: VARCHAR
+              description: Main content or body of the data entry
+              max_length: 65_535
+            - name: embedding
+              dtype: FLOAT_VECTOR
+              description: Embedding vectors representing the data entry
+              dim: 384 # Size of the embeddings to store in the vector database
+          description: Collection schema for diverse data sources
+      vdb_csv:
+        index_conf:
+          field_name: embedding
+          metric_type: L2
+          index_type: HNSW
+          params:
+            M: 8
+            efConstruction: 64
+
+        schema_conf:
+          enable_dynamic_field: true
+          schema_fields:
+            - name: id
+              dtype: INT64
+              description: Primary key for the collection
+              is_primary: true
+              auto_id: true
+            - name: title
+              dtype: VARCHAR
+              description: Title or heading of the data entry
+              max_length: 65_535
+            - name: source
+              dtype: VARCHAR
+              description: Source or origin of the data entry
+              max_length: 65_535
+            - name: summary
+              dtype: VARCHAR
+              description: Brief summary or abstract of the data content
+              max_length: 65_535
+            - name: content
+              dtype: VARCHAR
+              description: Main content or body of the data entry
+              max_length: 65_535
+            - name: embedding
+              dtype: FLOAT_VECTOR
+              description: Embedding vectors representing the data entry
+              dim: 384 # Size of the embeddings to store in the vector database
+          description: Collection schema for diverse data sources
+      vdb_rss:
+        index_conf:
+          field_name: embedding
+          metric_type: L2
+          index_type: HNSW
+          params:
+            M: 8
+            efConstruction: 64
+
+        schema_conf:
+          enable_dynamic_field: true
+          schema_fields:
+            - name: id
+              dtype: INT64
+              description: Primary key for the collection
+              is_primary: true
+              auto_id: true
+            - name: title
+              dtype: VARCHAR
+              description: Title or heading of the data entry
+              max_length: 65_535
+            - name: source
+              dtype: VARCHAR
+              description: Source or origin of the data entry
+              max_length: 65_535
+            - name: summary
+              dtype: VARCHAR
+              description: Brief summary or abstract of the data content
+              max_length: 65_535
+            - name: content
+              dtype: VARCHAR
+              description: Main content or body of the data entry
+              max_length: 65_535
+            - name: embedding
+              dtype: FLOAT_VECTOR
+              description: Embedding vectors representing the data entry
+              dim: 384 # Size of the embeddings to store in the vector database
+          description: Collection schema for diverse data sources
