--- a/docker/conda/environments/cuda11.8_dev.yml
+++ b/docker/conda/environments/cuda11.8_dev.yml
@@ -86,7 +86,7 @@ dependencies:
     - pybind11-stubgen=0.10.5
     - pydot
     - pylint>=2.17.4,<2.18 # 2.17.4 contains a fix for toml support
-    - pytest
+    - pytest=7.4
     - pytest-asyncio
     - pytest-benchmark>=4.0
     - pytest-cov
