fix cudf api misuse, use correct column owners

--- a/conda/environments/all_cuda-121_arch-x86_64.yaml
+++ b/conda/environments/all_cuda-121_arch-x86_64.yaml
@@ -96,6 +96,7 @@ dependencies:
 - sphinx
 - sphinx_rtd_theme
 - sqlalchemy
+- sysroot_linux-64=2.17
 - tqdm=4
 - transformers=4.36.2
 - tritonclient=2.34
