--- a/conda/environments/dev_cuda-121_arch-x86_64.yaml
+++ b/conda/environments/dev_cuda-121_arch-x86_64.yaml
@@ -77,6 +77,7 @@ dependencies:
 - sphinx
 - sphinx_rtd_theme
 - sqlalchemy
+- sysroot_linux-64=2.17
 - tqdm=4
 - tritonclient=2.34
 - typing_utils=0.1
