--- a/dependencies.yaml
+++ b/dependencies.yaml
@@ -170,7 +170,6 @@ dependencies:
     common:
       - output_types: [conda]
         packages:
-          - mrc=24.03
           - boost-cpp=1.84
           - ccache
           - cmake=3.27
@@ -182,6 +181,7 @@ dependencies:
           - glog=0.6
           - gxx_linux-64=11.2
           - librdkafka=2.2
+          - mrc=24.03
           - ninja=1.11
           - nlohmann_json=3.9
           - pkg-config=0.29 # for mrc cmake
@@ -189,6 +189,7 @@ dependencies:
           - pybind11-stubgen=0.10
           - rapidjson=1.1.0
           - scikit-build=0.17.6
+          - sysroot_linux-64=2.17
           - tritonclient=2.34
           - ucx=1.15
 
