--- a/conda/environments/examples_cuda-121_arch-x86_64.yaml
+++ b/conda/environments/examples_cuda-121_arch-x86_64.yaml
@@ -23,7 +23,7 @@ dependencies:
 - distributed=2023.12.1
 - elasticsearch==8.9.0
 - feedparser=6.0.10
-- grpcio
+- grpcio=1.59
 - huggingface_hub=0.20.2
 - jsonpatch>=1.33
 - kfp
@@ -61,7 +61,7 @@ dependencies:
   - dgl
   - dglgo
   - google-search-results==2.4
-  - grpcio-status==1.58
+  - grpcio-status==1.59
   - milvus==2.3.2
   - nemollm
   - pymilvus==2.3.2
