Moved document processing out of threadpool execution

--- a/examples/llm/vdb_upload/vdb_config.yaml
+++ b/examples/llm/vdb_upload/vdb_config.yaml
@@ -88,6 +88,7 @@ vdb_pipeline:
         batch_size: 1024
         extractor_config:
           chunk_size: 512
+          num_threads: 10
           chunk_overlap: 51
         enable_monitor: True
         filenames:
