--- a/conda/environments/all_cuda-121_arch-x86_64.yaml
+++ b/conda/environments/all_cuda-121_arch-x86_64.yaml
@@ -79,10 +79,10 @@ dependencies:
 - pybind11-stubgen=0.10
 - pylint=3.0.3
 - pypdf=3.17.4
-- pytest
 - pytest-asyncio
 - pytest-benchmark=4.0
 - pytest-cov
+- pytest=7.4.4
 - python-confluent-kafka=2.2.0
 - python-graphviz
 - python=3.10
