Misc Conda Improvements (#1462)
* Update examples to use package relative paths where possible allowing users of the Morpheus conda package to run examples.
* Install `pyarrow-hotfix` via conda rather than pip
* Ensure `pyarrow-hotfix` is installed during conda build enabling stubs to be generated.
* Fix version restriction for sqlalchemy in `meta.yaml`
* Fix type-o in `dependencies.yaml` causing duplicate entries for the `click` package.
* Add examples target to `dependencies.yaml`.
* Specify a version for sysroot_linux-64, prevents older kernel headers from being installed causing glibc link errors.
* Update `docker/build_conda_packages.sh` to create `.conda-bld` dir if it doesn't already exist

Closes #1461


## By Submitting this PR I confirm:
- I am familiar with the [Contributing Guidelines](https://github.com/nv-morpheus/Morpheus/blob/main/docs/source/developer_guide/contributing.md).
- When the PR is ready for review, new or existing tests cover these changes.
- When the PR is ready for review, the documentation is up to date with these changes.

Authors:
  - David Gardner (https://github.com/dagardner-nv)
  - Michael Demoret (https://github.com/mdemoret-nv)

Approvers:
  - Michael Demoret (https://github.com/mdemoret-nv)

URL: https://github.com/nv-morpheus/Morpheus/pull/1462

--- a/docker/conda/environments/cuda11.8_dev.yml
+++ b/docker/conda/environments/cuda11.8_dev.yml
@@ -83,10 +83,11 @@ dependencies:
     - pluggy=1.0
     - protobuf=4.21.*
     - pyarrow * *_cuda # Ensure we get a CUDA build. Version determined by cuDF
+    - pyarrow-hotfix # CVE-2023-47248. See morpheus/__init__.py for more details
     - pybind11-stubgen=0.10.5
     - pydot
     - pylint>=2.17.4,<2.18 # 2.17.4 contains a fix for toml support
-    - pytest
+    - pytest=7.4
     - pytest-asyncio
     - pytest-benchmark>=4.0
     - pytest-cov
@@ -124,6 +125,5 @@ dependencies:
         # Add additional dev dependencies here
         - databricks-connect
         - milvus==2.3.2
-        - pyarrow_hotfix # CVE-2023-47248. See morpheus/__init__.py for more details
         - pymilvus==2.3.2
         - pytest-kafka==0.6.0
