--- a/ci/conda/recipes/morpheus/meta.yaml
+++ b/ci/conda/recipes/morpheus/meta.yaml
@@ -63,6 +63,7 @@ outputs:
         - mrc {{ minor_version }}
         - pip
         - pyarrow * *_cuda # Ensure we get a CUDA build. Version determined by cuDF
+        - pyarrow-hotfix # CVE-2023-47248
         - pybind11-stubgen 0.10.5
         - python {{ python }}
         - rapidjson 1.1
@@ -92,6 +93,7 @@ outputs:
         - pandas 1.3.*
         - pluggy 1.0.*
         - pyarrow * *_cuda # Ensure we get a CUDA build. Version determined by cuDF
+        - pyarrow-hotfix # CVE-2023-47248
         - python
         - python-confluent-kafka 1.9.2
         - pytorch 2.0.1
@@ -99,7 +101,7 @@ outputs:
         - requests=2.31
         - requests-cache=1.1
         - scikit-learn 1.2.2.*
-        - sqlalchemy <=2.0 # 2.0 is incompatible with pandas=1.3
+        - sqlalchemy <2.0 # 2.0 is incompatible with pandas=1.3
         - tqdm 4.*
         - tritonclient 2.26.*
         - typing_utils 0.1.*
