Pin pytest to <8 (#1485)
Closes #1484

## By Submitting this PR I confirm:
- I am familiar with the [Contributing Guidelines](https://github.com/nv-morpheus/Morpheus/blob/main/docs/source/developer_guide/contributing.md).
- When the PR is ready for review, new or existing tests cover these changes.
- When the PR is ready for review, the documentation is up to date with these changes.

Authors:
  - David Gardner (https://github.com/dagardner-nv)

Approvers:
  - Michael Demoret (https://github.com/mdemoret-nv)

URL: https://github.com/nv-morpheus/Morpheus/pull/1485

--- a/conda/environments/all_cuda-118_arch-x86_64.yaml
+++ b/conda/environments/all_cuda-118_arch-x86_64.yaml
@@ -82,7 +82,7 @@ dependencies:
 - pytest-asyncio
 - pytest-benchmark>=4.0
 - pytest-cov
-- pytest=7.4
+- pytest<8
 - python-confluent-kafka=1.9.2
 - python-dotenv=1.0
 - python-graphviz
