--- a/conda/environments/dev_cuda-118_arch-x86_64.yaml
+++ b/conda/environments/dev_cuda-118_arch-x86_64.yaml
@@ -66,7 +66,7 @@ dependencies:
 - pytest-asyncio
 - pytest-benchmark>=4.0
 - pytest-cov
-- pytest=7.4
+- pytest<8
 - python-confluent-kafka=1.9.2
 - python-graphviz
 - pytorch-cuda
