--- a/.github/workflows/ci_pipe.yml
+++ b/.github/workflows/ci_pipe.yml
@@ -21,6 +21,14 @@ on:
       run_check:
         required: true
         type: boolean
+      conda_run_build:
+        description: 'Runs the conda-build stage to ensure the conda package builds successfully'
+        required: true
+        type: boolean
+      conda_upload_label:
+        description: 'The label to use when uploading the conda package. Leave empty to disable uploading'
+        required: true
+        type: string
       container:
         required: true
         type: string
@@ -183,3 +191,40 @@ jobs:
       - name: build_docs
         shell: bash
         run: ./morpheus/ci/scripts/github/docs.sh
+
+  package:
+    name: Package
+    if: ${{ inputs.conda_run_build }}
+    needs: [check, documentation, test]
+    runs-on: linux-amd64-cpu16
+    timeout-minutes: 60
+    container:
+      credentials:
+        username: '$oauthtoken'
+        password: ${{ secrets.NGC_API_KEY }}
+      image: ${{ inputs.container }}
+    strategy:
+      fail-fast: true
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+        with:
+          lfs: false
+          path: 'morpheus'
+          fetch-depth: 0
+
+      - name: Get AWS credentials using OIDC
+        uses: aws-actions/configure-aws-credentials@v1-node16
+        with:
+          role-to-assume: ${{ vars.AWS_ROLE_ARN }}
+          aws-region: ${{ vars.AWS_REGION }}
+          role-duration-seconds: 43200 # 12h
+
+      - name: conda
+        shell: bash
+        env:
+          CONDA_TOKEN: "${{ secrets.CONDA_TOKEN }}"
+          SCRIPT_ARGS: "${{ inputs.conda_upload_label != '' && 'upload' || '' }}"
+          CONDA_PKG_LABEL: "${{ inputs.conda_upload_label }}"
+        run: ./morpheus/ci/scripts/github/conda.sh $SCRIPT_ARGS
