--- a/dependencies.yaml
+++ b/dependencies.yaml
@@ -237,7 +237,7 @@ dependencies:
               - google-search-results==2.4
               - grpcio-status==1.58 # To keep in sync with 1.58 grpcio which is installed for Morpheus
               - nemollm
-              - PyMuPDF=1.23.20
+              - PyMuPDF==1.23.20
 
 
   runtime:
