--- a/conda/environments/dev_cuda-121_arch-x86_64.yaml
+++ b/conda/environments/dev_cuda-121_arch-x86_64.yaml
@@ -29,7 +29,7 @@ dependencies:
 - cxx-compiler
 - cython=3.0
 - datacompy=0.10
-- dill
+- dill=0.3.7
 - doxygen=1.9.2
 - elasticsearch==8.9.0
 - exhale=0.3.6
@@ -58,7 +58,7 @@ dependencies:
 - pluggy=1.3
 - pre-commit
 - protobuf=4.24
-- pybind11-stubgen=0.10
+- pybind11-stubgen=0.10.5
 - pylint=3.0.3
 - pytest-asyncio
 - pytest-benchmark=4.0
