--- a/ci/conda/recipes/morpheus/meta.yaml
+++ b/ci/conda/recipes/morpheus/meta.yaml
@@ -46,12 +46,13 @@ outputs:
     requirements:
       build:
         - {{ compiler("c") }}
-        - {{ compiler("cxx") }}
         - {{ compiler("cuda") }}
+        - {{ compiler("cxx") }}
         - automake =1.16.5 # Needed for DOCA build
         - ccache
         - cmake =3.27
-        - cuda-cudart-dev {{ cuda_compiler_version }} # Needed by CMake to compile a test application
+        - cuda-cudart-dev {{ cuda_compiler_version }}.* # Needed by CMake to compile a test application
+        - cuda-version {{ cuda_compiler_version }}.*
         - libtool # Needed for DOCA build
         - ninja =1.11
         - pkg-config =0.29 # for mrc cmake
@@ -64,7 +65,7 @@ outputs:
         - cudf {{ rapids_version }}
         - cython =3.0
         - libcudf {{ rapids_version }}
-        - librdkafka =2.2
+        - librdkafka >=1.9.2,<1.10.0a0
         - mrc {{ minor_version }}
         - pip
         - pyarrow * *_cuda # Ensure we get a CUDA build. Version determined by cuDF
@@ -79,6 +80,7 @@ outputs:
         - {{ pin_compatible('cuda-cudart', min_pin='x.x', max_pin='x') }}
         - click >=8
         - configargparse =1.5.*
+        - cuda-version {{ cuda_compiler_version }}.*
         - cudf
         - cudf_kafka {{ rapids_version }}.*
         - cupy # Version determined from cudf
@@ -98,7 +100,7 @@ outputs:
         - pluggy =1.3.*
         - pyarrow * *_cuda # Ensure we get a CUDA build. Version determined by cuDF
         - python
-        - python-confluent-kafka =2.2.0
+        - python-confluent-kafka >=1.9.2,<1.10.0a0
         - pytorch
         - pytorch-cuda
         - requests
