--- a/conda/environments/all_cuda-121_arch-x86_64.yaml
+++ b/conda/environments/all_cuda-121_arch-x86_64.yaml
@@ -13,6 +13,7 @@ dependencies:
 - anyio>=3.7
 - appdirs
 - arxiv=1.4
+- automake
 - benchmark=1.8.3
 - boost-cpp=1.84
 - boto3
@@ -29,6 +30,7 @@ dependencies:
 - cuda-tools=12.1
 - cuda-version=12.1
 - cudf=24.02
+- cudf_kafka=24.02
 - cuml=24.02.*
 - cxx-compiler
 - cython=3.0
@@ -54,7 +56,8 @@ dependencies:
 - jsonpatch>=1.33
 - kfp
 - langchain=0.0.190
-- librdkafka=2.2
+- librdkafka>=1.9.2,<1.10.0a0
+- libtool
 - libwebp=1.3.2
 - mlflow=2.9.2
 - mrc=24.03
@@ -81,12 +84,13 @@ dependencies:
 - pytest-benchmark=4.0
 - pytest-cov
 - pytest=7.4.4
-- python-confluent-kafka=2.2.0
+- python-confluent-kafka>=1.9.2,<1.10.0a0
 - python-graphviz
 - python=3.10
 - pytorch-cuda
 - pytorch=*=*cuda*
 - rapidjson=1.1.0
+- rdma-core>=48
 - requests-cache=1.1
 - s3fs=2023.12.2
 - scikit-build=0.17.6
