--- a/dependencies.yaml
+++ b/dependencies.yaml
@@ -39,6 +39,7 @@ files:
       - runtime
       - checks
       - cve-mitigation
+      - doca
 
   dev:
     output: conda
@@ -61,7 +62,7 @@ files:
   examples:
     output: conda
     matrix:
-      cuda: ["11.8"]
+      cuda: ["12.1"]
       arch: [x86_64]
     includes:
       - examples
@@ -185,12 +186,13 @@ dependencies:
           - cmake=3.27
           - cuda-nvcc
           - cudf=24.02
+          - cudf_kafka=24.02
           - cxx-compiler
           - cython=3.0
           - gcc_linux-64=11.2
           - glog=0.6
           - gxx_linux-64=11.2
-          - librdkafka=2.2
+          - librdkafka>=1.9.2,<1.10.0a0
           - mrc=24.03
           - ninja=1.11
           - nlohmann_json=3.9
@@ -265,7 +267,7 @@ dependencies:
           - grpcio=1.59
           - mlflow=2.9.2
           - nvtabular=23.08.00
-          - python-confluent-kafka=2.2.0
+          - python-confluent-kafka>=1.9.2,<1.10.0a0
           - python-graphviz
           - pytorch-cuda
           - pytorch=*=*cuda*
@@ -386,6 +388,15 @@ dependencies:
       - output_types: [conda]
         packages:
           - libwebp=1.3.2 # Required for CVE mitigation: https://nvd.nist.gov/vuln/detail/CVE-2023-4863
+
+
+  doca:
+    common:
+      - output_types: [conda]
+        packages:
+          - automake
+          - libtool
+          - rdma-core>=48
 
   python:
     common:
